--- a/client/package.json
+++ b/client/package.json
@@ -1,15 +1,33 @@
 {
+  "name": "chat-app-client",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.0.6",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^6.29.0",
     "socket.io-client": "^4.8.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "vite": "^4.4.5"
   }
 }
