--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
-    "prisma": "^6.3.1",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "prisma": "^6.3.1"
   }
 }
