Remove unused files and configurations: delete Tailwind CSS setup, Prisma client, and related styles; add socket handling for user status and room invitations.

--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "prisma": "prisma",
+    "prisma:dev": "prisma migrate dev --name init",
+    "prisma:generate": "prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
