--- a/client/package.json
+++ b/client/package.json
@@ -11,16 +11,20 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@tailwindcss/vite": "^4.0.3",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.0.6",
+    "lucide-react": "^0.474.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^6.29.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "tailwind-variants": "^0.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -28,7 +32,8 @@
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
+    "shadcn-ui": "^0.9.4",
     "tailwindcss": "^3.4.17",
-    "vite": "^4.4.5"
+    "vite": "^6.1.0"
   }
 }
